--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poker-ts",
+  "name": "@nebular-lab/poker-ts",
   "version": "1.4.1",
   "description": "Texas Hold 'Em Poker table model with convenience features for running real games.",
   "main": "dist/index.js",
@@ -45,5 +45,6 @@
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
-  }
+  },
+  "private": "true"
 }
