--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/claudijo/poker-ts.git"
+    "url": "git+https://github.com/nebular-lab/poker-ts.git"
   },
   "homepage": "https://github.com/claudijo/poker-ts",
   "bugs": {
@@ -46,5 +46,8 @@
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   },
-  "private": "true"
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "access": "restricted"
+  }
 }
