--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "type": "git",
     "url": "git+https://github.com/nebular-lab/poker-ts.git"
   },
-  "homepage": "https://github.com/claudijo/poker-ts",
   "bugs": {
-    "url": "https://github.com/claudijo/poker-ts/issues"
+    "url": "https://github.com/nebular-lab/poker-ts/issues"
+  },
+   "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "@nebular-lab:registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "poker",
