--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nebular-lab/poker-ts",
-  "version": "1.1.0",
-  "description": "Texas Hold 'Em Poker table model with convenience features for running real games.",
+  "version": "1.1.1",
+  "description": "[Fork of poker-ts] Texas Hold 'Em Poker table model with convenience features for running real games.",
   "main": "dist/index.js",
   "files": [
     "dist"
